Feat/#119 방문/예약 단건 조회 구현 (#120)
* feat: 단건 조회 구현

* fix: type 한글로 변환환

* refactor: 단건 조회 수정

---------

Co-authored-by: 임수빈 <robin980108@naver.com>
Co-authored-by: tonsangjin <tonsangjin@gmail.com>