@@ -1,6 +1,5 @@
 package com.example.demo.infrastructure.persistence.adapter;
 
-import com.example.demo.domain.model.Member;
 import com.example.demo.domain.model.waiting.Waiting;
 import com.example.demo.domain.model.waiting.WaitingQuery;
 import com.example.demo.domain.model.waiting.WaitingStatus;
@@ -9,7 +8,9 @@ import com.example.demo.infrastructure.persistence.entity.WaitingEntity;
 import com.example.demo.infrastructure.persistence.mapper.WaitingEntityMapper;
 import com.example.demo.infrastructure.persistence.repository.WaitingJpaRepository;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Repository;
@@ -36,18 +37,33 @@ public class WaitingPortAdapter implements WaitingPort {
     @Override
     public List<Waiting> findByQuery(WaitingQuery query) {
         // TODO 다른 기술을 활용한 동적 쿼리 작성 필요
+        if (query.waitingId() != null) {
+            return waitingJpaRepository.findById(query.waitingId())
+                    .stream()
+                    .map(this::mapEntityToDomain)
+                    .filter(Objects::nonNull)
+                    .collect(Collectors.toList());
+        }
+
         List<WaitingEntity> waitingEntities = switch (query.sortOrder()) {
             case RESERVED_FIRST_THEN_DATE_DESC ->
                     waitingJpaRepository.findByMemberIdOrderByStatusReservedFirstThenCreatedAtDesc(
                             query.memberId(), WaitingStatus.WAITING, PageRequest.of(0, query.size()));
         };
-
         // TODO 성능 고려 해야 함.
-        return waitingEntities.parallelStream()
-                .map(entity -> {
-                    return waitingEntityMapper.toDomain(entity, popupPortAdapter.findById(entity.getPopupId()).orElse(null), new Member(1L, "mock", "mock@mock.com"));
-                })
-                .toList();
+        return waitingEntities.stream()
+                .map(this::mapEntityToDomain)
+                .filter(Objects::nonNull)
+                .collect(Collectors.toList());
+    }
+
+    private Waiting mapEntityToDomain(WaitingEntity entity) {
+        var popup = popupPortAdapter.findById(entity.getPopupId()).orElse(null);
+        var member = memberPortAdapter.findById(entity.getMemberId()).orElse(null);
+        if (popup == null || member == null) {
+            return null;
+        }
+        return waitingEntityMapper.toDomain(entity, popup, member);
     }
 
     @Override
